--- a/index.html
+++ b/index.html
@@ -2,8 +2,86 @@
 <html lang="en">
     <head>
         <title>Microverse Project</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello World, we are software developers!</h1>
+        <div>
+            <h1 id="title">freeCodeCamp Survey Form</h1>
+            <p id="description">Thank you for taking the time to help us improve the platform</p>
+            <form id="survey-form">
+                <div>
+                    <label id="name-label">Name</label><br>
+                    <input id="name" type="text" placeholder="Enter your name" required />
+                </div>
+                <div>
+                    <label id="email-label">Email</label><br>
+                    <input id="email" type="email" placeholder="Enter your email" required />
+                </div>
+                <div>
+                    <label id="number-label">Age (optional)</label><br>
+                    <input id="age" type="number" [min]="18" [max]="100" placeholder="Age" />
+                </div>
+                <div>
+                    <label id="dropdown-label">Which option best describes your current role?</label><br>
+                    <select id="dropdown1">
+                        <option value="0">Select current role</option>
+                        <option value="1">Student</option>
+                        <option value="2">Full Time Job</option>
+                        <option value="3">Full Time Learner</option>
+                        <option value="4">Prefer not to say</option>
+                        <option value="5">Other</option>
+                    </select>
+                </div>
+                <div>
+                    <label id="number-label">Would you recommend freeCodeCamp to a friend?</label><br>
+                    <input type="radio" name="recommand" id="recommand1" />
+                    <label>Definitely</label><br>
+                    <input type="radio" name="recommand" id="recommand2" />
+                    <label>Maybe</label><br>
+                    <input type="radio" name="recommand" id="recommand3" />
+                    <label>Not sure</label>
+                </div>
+                <div>
+                    <label id="dropdown2-label">What is your favorite feature of freeCodeCamp?</label><br>
+                    <select id="dropdown2">
+                        <option value="0">Select an option</option>
+                        <option value="1">Challenges</option>
+                        <option value="2">Projects</option>
+                        <option value="3">Community</option>
+                        <option value="4">Open source</option>
+                    </select>
+                </div>
+                <div>
+                    <label id="checkbox-label">What would you like to see improved? (Check all that apply)</label><br>
+                    <input type="checkbox" name="improove" id="improove1" />
+                    <label>Front-end Projects</label><br>
+                    <input type="checkbox" name="improove" id="improove2" />
+                    <label>Back-end Projects</label><br>
+                    <input type="checkbox" name="improove" id="improove3" />
+                    <label>Data Visualization</label><br>
+                    <input type="checkbox" name="improove" id="improove4" />
+                    <label>Challenges</label><br>
+                    <input type="checkbox" name="improove" id="improove5" />
+                    <label>Open Source Community</label><br>
+                    <input type="checkbox" name="improove" id="improove6" />
+                    <label>Gitter help rooms</label><br>
+                    <input type="checkbox" name="improove" id="improove7" />
+                    <label>Videos</label><br>
+                    <input type="checkbox" name="improove" id="improove8" />
+                    <label>City Meetups</label><br>
+                    <input type="checkbox" name="improove" id="improove9" />
+                    <label>Wiki</label><br>
+                    <input type="checkbox" name="improove" id="improove10" />
+                    <label>Forum</label><br>
+                    <input type="checkbox" name="improove" id="improove11" />
+                    <label>Additional Courses</label>
+                </div>
+                <div>
+                    <label id="textarea-label">Any comments or suggestions?</label><br>
+                    <textarea id="textarea" row="10" col="150" placeholder="Enter your comment here..."></textarea>
+                </div>
+                <input type="submit"/>
+            </form>
+        </div>
     </body>
 </html>
